[project]
name = "aorta-model-utilities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "meshio>=5.3.5",
    "numpy>=2.5.0",
    "pynrrd>=1.1.3",
    "pyvista>=0.48.4",
    "scipy>=1.18.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]
